# wasd5

./: .gitignore  Cargo.toml  README.md  Rocket.toml  calendar.md
migrations/00000000000001_create_users/: up.sql
migrations/00000000000002_create_calendar/: down.sql  up.sql
migrations/00000000000003_create_calendar_allowed_ips/: down.sql  up.sql
pages/: hello-world.md
pages/landing/: landing.md
src/: admin.rs  calendar.rs  db.rs  helpers.rs  lib.rs  main.rs  models.rs  schema.rs
templates/: 404.html.tera  base.html.tera  calendar.html.tera  folder.html.tera  index.html.tera  page.html.tera  pages.html.tera
templates/admin/: calendar_settings.html.tera  edit_page.html.tera  files.html.tera  index.html.tera  landing_edit.html.tera  login.html.tera  new_page.html.tera  new_user.html.tera  pictures.html.tera  users.html.tera
