[package]
name = "wasd5"
version = "0.1.0"
edition = "2024"
authors = ["Bjarke Falch Sørensen <bs@wasd.dk>"]

[dependencies]

# Web framework + templates
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }

# Markdown -> HTML
pulldown-cmark = "0.9"

# For passing template contexts
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["secrets", "json"] }
serde_json = "1.0"

# Database: Diesel + SQLite
diesel = { version = "2.0.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
r2d2 = "0.8"
bcrypt = "0.12"
chrono = { version = "0.4", features = ["alloc"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
clap = { version = "4.3", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
